@@ -3,6 +3,7 @@
 
 - fix pip-installation mixups by always unsetting PIP_RESPECT_VIRTUALENV
   (thanks Armin Ronacher)
+- issue1: Add a bootstrap script for tox
 
 0.8
 -----------------
